--- a/frontend/src/app/login/login.page.html
+++ b/frontend/src/app/login/login.page.html
@@ -9,9 +9,9 @@
     <ion-grid>
       <form #f="ngForm" (ngSubmit)="onLogin()" class="form">
         <ion-row>
-          <ion-col size-sm="8" offset-sm="2">
+          <ion-col size-sm="4" offset-sm="4">
             <ion-card>
-              <p><b>Login</b></p>
+              <h1><b>Login</b></h1>
               <ion-item>
                 <ion-label position="floating" class="ion-padding">
                   Username
