--- a/frontend/src/app/tab1/tab1.page.html
+++ b/frontend/src/app/tab1/tab1.page.html
@@ -1,15 +1,43 @@
 <ion-header lines="none">
   <ion-toolbar color="primary">
-    <ion-title> Home </ion-title>
+    <ion-title class="ion-text-center"> Home </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="8" offset-sm="2" text-center>
+        <ion-list>
+          <ion-list-header><h1>Your Favourite Movie List</h1></ion-list-header>
+          <ng-container *ngFor="let movie of state.favList">
+            <!-- <ion-card>
+              <ion-card-header>
+                <ion-card-title>{{movie.title}}</ion-card-title>
+                <ion-card-subtitle>{{movie.year}}</ion-card-subtitle>
+              </ion-card-header>
+              <ion-img [src]="movie.poster"></ion-img>
+            </ion-card> -->
+            <ion-item>
+              <ion-thumbnail slot="start">
+                <img [src]="movie.poster" />
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{movie.title}}</h2>
+                <h3>{{movie.year}}</h3>
+              </ion-label>
+              <ion-button (click)="removeFromList(movie.smartId)" slot="end"
+                >Remove
+              </ion-button>
+            </ion-item>
+          </ng-container>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size="large">
+      <ion-icon name="log-out-outline" (click)="logout()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
